# cpp_project_template

./: .clang-format  .clang-tidy  .clangd
cmake/: CMakeLists.txt  CMakePresets.json
cmake/cpp_00/: CMakeLists.txt
cmake/cpp_01/: CMakeLists.txt
cmake/cpp_02/: CMakeLists.txt
cmake/cpp_03/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
include/: cpp_00.h  cpp_01.h  cpp_02.h  cpp_03.h
src/: cpp_01.cpp  cpp_02.cpp  cpp_03.cpp  main.cpp
tests/: test_cpp_01.cpp
